Fix layout issues (#83)
* Fix layout issues

* Fix cover layout

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -35,6 +35,7 @@ body {
   background-blend-mode: color-burn;
   height: 100svh;
   display: flex;
+  justify-content: center;
 }
 
 a {
@@ -422,7 +423,8 @@ li:where(:hover, :focus-within) .list-wrapper .expand-item {
 }
 
 .notes-container > form {
-  margin-top: 0.5rem;
+  margin-top: 1rem;
+  display: flex;
 }
 
 .notes-container input {
@@ -438,8 +440,8 @@ li:where(:hover, :focus-within) .list-wrapper .expand-item {
   font-size: 1.5rem;
 }
 
-.notes-container input:not(.edit-note) {
-  line-height: calc(var(--paper-line-height) - 1px);
+.notes-container .new-note {
+  text-indent: 8px;
 }
 
 .notes-container input[type="text"]:focus {
@@ -455,9 +457,6 @@ li:where(:hover, :focus-within) .list-wrapper .expand-item {
 }
 
 .notes-container .add-note--button {
-  position: absolute;
-  /* right: 0.5rem;
-  top: 2.5rem; */
   height: 2.5rem;
   width: 2.5rem;
   background-color: #d4caa3;
@@ -485,14 +484,20 @@ li:where(:hover, :focus-within) .list-wrapper .expand-item {
 
 .notes-list li {
   font-size: 1.4rem;
-  line-height: 100%;
+  line-height: 1.1;
   padding: 8px 0;
-  height: 40px;
 }
 
-.notes-list li:hover > .edit-note-button,
-.notes-list li:focus-within > .edit-note-button {
-  opacity: 0.7;
+.notes-list .note-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.notes-list .note-text {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  word-break: break-word;
 }
 
 .edit-note-button {
@@ -500,31 +505,30 @@ li:where(:hover, :focus-within) .list-wrapper .expand-item {
   border: none;
   cursor: pointer;
   color: black;
-  opacity: 0;
   padding: 0.125rem 0.25rem;
   display: flex;
   transition: opacity 200ms ease, ouline 200ms ease;
 }
 
-.notes-list li > .edit-note-button {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  right: 0;
+.notes-list li .edit-note-button {
   opacity: 0;
   transition: opacity 200ms ease;
 }
 
+.notes-list li:hover .edit-note-button,
+.notes-list li:focus-within .edit-note-button {
+  opacity: 0.5;
+}
+
 .edit-note-button-group {
-  position: absolute;
-  right: 0;
-  top: 0;
   display: flex;
   gap: 2px;
 }
 
 .notes-list form {
   position: relative;
+  width: 100%;
+  display: flex;
 }
 
 .notes-list .edit-note-form-action {
@@ -758,7 +762,6 @@ textarea {
 .list-inline-edit input[type="text"].new-item {
   text-indent: 0px;
   font-size: inherit !important;
-  /* line-height: inherit; */
   letter-spacing: 1.5px;
   word-spacing: 3px;
   max-width: initial;
@@ -840,7 +843,6 @@ button.button-appear-exit-done {
   display: flex;
   align-items: center;
   cursor: pointer;
-  /* padding: 0.125rem 0.25rem; */
   padding: 0;
   border-radius: 2px;
 }
@@ -1014,6 +1016,10 @@ label.user-nav {
 }
 
 /* cover */
+
+.cover {
+  width: 100%;
+}
 
 .center-div {
   background-color: var(--leather-color);
@@ -1271,7 +1277,8 @@ label.user-nav {
   body,
   html,
   #root,
-  .position-div {
+  .position-div,
+  .grid-div .page {
     overscroll-behavior: none;
   }
 
@@ -1344,8 +1351,7 @@ label.user-nav {
     display: block;
     margin: 3% auto;
     height: 96vh;
-    width: 93%;
-    max-width: 700px;
+    width: 95%;
     padding-top: 170px;
   }
 
@@ -1604,18 +1610,30 @@ label.user-nav {
     top: 2px;
   }
 
+  .notes-border {
+    left: -1.8rem;
+  }
+
+  .notes-container {
+    padding: 0.5rem;
+  }
+
   .notes-container input {
     text-indent: 0;
     -webkit-padding-start: 4px;
   }
 
   .notes-container .notes-list {
-    padding-left: 1rem;
+    padding-left: 1.5rem;
   }
 
   .edit-note-form-action,
   .edit-note-button {
-    opacity: 0.7 !important;
+    opacity: 0.5 !important;
+  }
+
+  .edit-note-button {
+    display: none;
   }
 
   .notes-list input.edit-note {
